--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "format": "prettier src/ --write"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.4.8",
+    "@tabler/icons-react": "^3.20.0",
+    "framer-motion": "^11.11.9",
     "next": "15.0.1",
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021"
+    "next-themes": "^0.3.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
