access env variables safely

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "extends": ["next/core-web-vitals", "next/typescript", "prettier"],
-  "plugins": ["check-file"],
+  "plugins": ["check-file", "n"],
   "rules": {
     "prefer-arrow-callback": ["error"],
     "prefer-template": ["error"],
@@ -11,6 +11,10 @@
       { "**/*.{ts,tsx}": "KEBAB_CASE" },
       { "ignoreMiddleExtensions": true }
     ],
-    "check-file/folder-naming-convention": ["error", { "src/**": "KEBAB_CASE" }]
+    "check-file/folder-naming-convention": [
+      "error",
+      { "src/**": "KEBAB_CASE" }
+    ],
+    "n/no-process-env": ["error"]
   }
 }
