setup basic auth

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,7 @@
     ],
     "check-file/folder-naming-convention": [
       "error",
-      { "src/**": "KEBAB_CASE" }
+      { "src/**/!^[*": "KEBAB_CASE" }
     ],
     "n/no-process-env": ["error"]
   }
