--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tabler/icons-react": "^3.20.0",
     "framer-motion": "^11.11.9",
     "next": "15.0.1",
+    "next-auth": "^4.24.10",
     "next-themes": "^0.3.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
