--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@nextui-org/react": "^2.4.8",
     "@t3-oss/env-nextjs": "^0.11.1",
     "@tabler/icons-react": "^3.20.0",
+    "drizzle-orm": "^0.35.3",
     "framer-motion": "^11.11.9",
     "next": "15.0.1",
     "next-auth": "^4.24.10",
     "next-themes": "^0.3.0",
+    "postgres": "^3.4.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "zod": "^3.23.8"
@@ -26,6 +28,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "drizzle-kit": "^0.26.2",
     "eslint": "^8",
     "eslint-config-next": "15.0.1",
     "eslint-config-prettier": "^9.1.0",
