create schemas and connect auth

--- a/package.json
+++ b/package.json
@@ -7,13 +7,24 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier src/ --write"
+    "format": "prettier src/ --write",
+    "db:migrate": "cross-env DB_MIGRATING=true drizzle-kit migrate",
+    "db:generate": "npx drizzle-kit generate",
+    "db:push": "npx drizzle-kit push",
+    "db:studio": "npx drizzle-kit studio"
   },
   "dependencies": {
+    "@auth/drizzle-adapter": "^1.7.2",
+    "@conform-to/react": "^1.2.2",
+    "@conform-to/zod": "^1.2.2",
     "@nextui-org/react": "^2.4.8",
     "@t3-oss/env-nextjs": "^0.11.1",
     "@tabler/icons-react": "^3.20.0",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.4.5",
+    "dotenv-expand": "^11.0.6",
     "drizzle-orm": "^0.35.3",
+    "drizzle-zod": "^0.5.1",
     "framer-motion": "^11.11.9",
     "next": "15.0.1",
     "next-auth": "^4.24.10",
